change dependency version

--- a/samples/tutorial-xml/pom.xml
+++ b/samples/tutorial-xml/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
-      <version>4.0.3.CI-SNAPSHOT</version>
+      <version>4.0.4.RELEASE</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -111,19 +111,19 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>4.0.3.CI-SNAPSHOT</version>
+      <version>4.0.4.RELEASE</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-taglibs</artifactId>
-      <version>4.0.3.CI-SNAPSHOT</version>
+      <version>4.0.4.RELEASE</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>4.0.3.CI-SNAPSHOT</version>
+      <version>4.0.4.RELEASE</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
